# django-partial-content

./: .gitignore  README.rst  requirements.txt  setup.cfg
src/: __init__.py
test/: big  file  test.py
