[metadata]
name = django-partial-content
version = 0.9.0
description = Support for partial content in Django staticfiles.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Tomasz Szatkowski
author_email = szatkus@gmail.com
maintainer = Tomasz Szatkowski
maintainer_email = szatkus@gmail.com
url = https://github.com/szatkus/django-partial-content
license = BSD
keywords = 
	django
	partial
	range
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Application Frameworks
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
	django-partial-content=src
packages = django-partial-content
install_requires = Django>=3.0
python_requires = >=3.5

[flake8]
max-line-length = 120

[easy_install]

